[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="ColorRect" parent="."]
margin_right = 256.0
margin_bottom = 160.0
color = Color( 0, 0, 0, 0.815686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSLabel" type="Label" parent="Info/VBoxContainer"]
margin_right = 236.0
margin_bottom = 14.0
text = "FPS: 60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MemUsage" type="Label" parent="Info/VBoxContainer"]
margin_top = 18.0
margin_right = 236.0
margin_bottom = 32.0
text = "Memory Usage: 0B"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowSize" type="Label" parent="Info/VBoxContainer"]
margin_top = 36.0
margin_right = 236.0
margin_bottom = 50.0
text = "Window Size: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IsControllerConnected" type="Label" parent="Info/VBoxContainer"]
margin_top = 54.0
margin_right = 236.0
margin_bottom = 68.0
text = "Controller Connected: False"

[node name="BulletCountLabel" type="Label" parent="Info/VBoxContainer"]
margin_top = 72.0
margin_right = 236.0
margin_bottom = 86.0
text = "Spawned Bullets: 0"

[node name="EnemyCountLabel" type="Label" parent="Info/VBoxContainer"]
margin_top = 90.0
margin_right = 236.0
margin_bottom = 104.0
text = "Spawned Enemies: 0"

[node name="PlayerHealthLabel" type="Label" parent="Info/VBoxContainer"]
margin_top = 108.0
margin_right = 236.0
margin_bottom = 122.0
text = "Player Health: 100 / 100"

[node name="NextSpawnTime" type="Label" parent="Info/VBoxContainer"]
margin_top = 126.0
margin_right = 236.0
margin_bottom = 140.0
text = "Time Before Next Spawn: 0s"

[node name="HealthLabel" type="Label" parent="."]
margin_left = 832.0
margin_top = 528.0
margin_right = 918.0
margin_bottom = 542.0
rect_scale = Vector2( 2, 2 )
text = "HP: 100%"
__meta__ = {
"_edit_use_anchors_": false
}
